# SmartEqualizerAPOPresetsManager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  components.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/scripts/: install-apo.ps1
src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs  state.rs
src/lib/: convolution.ts  dragState.ts  store.ts  tauri.ts  types.ts  utils.ts
src/lib/components/: AboutModal.svelte  ConfigEditorModal.svelte  ConvolutionFilePanel.svelte  EditorPane.svelte  EmojiPicker.svelte  GroupSidebar.svelte  LogsModal.svelte  PresetWorkspace.svelte  TroubleshootModal.svelte
src/lib/components/layout/: FooterBar.svelte
src/lib/components/ui/: button.svelte  input.svelte  textarea.svelte
src/routes/: +page.svelte
